--- a/src/positive-html.css
+++ b/src/positive-html.css
@@ -66,10 +66,11 @@ td:first-child {
   letter-spacing: 2px;
   color: #bd5b5b;
   font-size: 1.35rem;
+  text-align: left;
 }
 
 td:last-child {
-  text-align: justify; /* HTML justification sucks, but in this case... */
+  text-align: right; /* HTML justification sucks, but in this case... */
 }
 
 hr {
@@ -80,6 +81,7 @@ main {
   padding: 15px;
   max-width: 800px;
   margin: 0 auto;
+  margin-bottom: 100px;
 }
 
 section {
