--- a/src/positive-pdf.css
+++ b/src/positive-pdf.css
@@ -51,7 +51,7 @@ table {
 }
 
 td:first-child {
-  text-align: right;
+  text-align: left;
   color: #c00000;
   /* letter-spacing: 2px; PDF hates letter spacing */
   font-weight: bold;
@@ -59,6 +59,7 @@ td:first-child {
 
 td:last-child {
   text-align: justify; /* HTML justification sucks, but in this case... */
+  text-align: right;
 }
 
 hr {
@@ -69,6 +70,7 @@ main {
   padding: 15px;
   max-width: 800px;
   margin: 0 auto;
+  margin-bottom: 100px;
 }
 
 section {
